--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,24 +1,25 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <a href="{% url 'recipes-recipe' recipe.id %}">
-        <img src="{{ recipe.cover.url }}" alt="Temporário">
-    </a>
+        <a href="{% url 'recipes:recipe' recipe.id %}">
+            <img src="{{ recipe.cover.url }}" alt="Temporário">
+        </a>
     </div>
     <div class="recipe-title-container">
         <h2 class="recipe-title">
-            <a href="{% url 'recipes-recipe' recipe.id %}">
-             {{ recipe.title }}</h2>
+            <a href="{% url 'recipes:recipe' recipe.id %}">
+                {{ recipe.title }}
             </a>
+        </h2>
     </div>
 
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            {{ recipe.author.first_name }}  {{ recipe.author.last_name }}
+            {{ recipe.author.first_name }} {{ recipe.author.last_name }}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
-            {{ recipe.created_at }}
+            {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
         <span class="recipe-author-item">
             <a href="/recipes/category/cafe-da-manha/">
@@ -42,27 +43,24 @@
         <div class="recipe-meta recipe-servings">
             <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
             <div class="recipe-meta-text">
-                0 Porções
+                {{ recipe.servings }} {{ recipe.servings_unit }}
             </div>
         </div>
     </div>
 
-
     {% if is_detail_page is not True %}
-    <footer class="recipe-footer">
-        <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes-recipe' recipe.id %}">
-            <i class="fas fa-eye"></i>
-            <span>ver mais...</span>
-        </a>
-    </footer>
+        <footer class="recipe-footer">
+            <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipe' recipe.id %}">
+                <i class="fas fa-eye"></i>
+                <span>ver mais...</span>
+            </a>
+        </footer>
     {% endif %}
 
     {% if is_detail_page is True %}
-    
-    <div class="preparation-steps">
-        {{recipe.preparation_steps|linebreaksbr}}
-    </div>
-
+        <div class="preparation-steps">
+            {{ recipe.preparation_steps|linebreaksbr }}
+        </div>
     {% endif %}
 
 </div>
